# teanga-spacy

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
teanga_spacy/: __init__.py  teanga_spacy.py
