[tool.poetry]
name = "teanga-spacy"
version = "0.1.0"
description = ""
authors = ["John P. McCrae <john@mccr.ae>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.2"
teanga = {path = "../teanga2/target/wheels/teanga-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl"}
pyyaml = "^6.0.1"
sphinx = { version= "^4.2.0", optional = true }
sphinx_rtd_theme = { version= "^1.0.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
